# semilattice-database

./: .gitignore  Cargo.toml  README.md
semilattice-database/: Cargo.toml  README.md
semilattice-database-session/: Cargo.toml  README.md
semilattice-database-session/src/: commit.rs  lib.rs  session.rs  update.rs
semilattice-database-session/src/session/: data.rs  operation.rs  relation.rs  search.rs  sequence.rs  sort.rs  temporary_data.rs
semilattice-database-session/tests/: test.rs  test2.rs  test4.rs
semilattice-database/src/: collection.rs  lib.rs  relation.rs  search.rs
semilattice-database/src/collection/: row.rs
semilattice-database/src/relation/: index.rs
semilattice-database/src/search/: condition.rs  join.rs  result.rs
semilattice-database/tests/: test1.rs
src/: collection.rs  commit.rs  lib.rs  prelude.rs  relation.rs  search.rs  session.rs  transaction.rs  update.rs
src/search/: condition.rs
src/session/: operation.rs  relation.rs  search.rs  sequence_number.rs  sort.rs  update.rs
tests/: test.rs  test1.rs  test2.rs  test4.rs
