[package]
name = "semilattice-database"
version = "0.40.3"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Data is connected by a directed graph, and each node has an arbitrarily defined key-value.A database is not a tree."

repository = "https://github.com/OdenShirataki/semilattice-database"

keywords = ["database","library"]
categories = ["database","database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
chrono = "0.4"
serde = "1"

versatile-data = { version = "0.58" , path = "../versatile-data" }
idx_binary = { version = "0.11" , path = "../idx_binary" }
file_mmap = { version = "0.14" , path = "../file_mmap" }
