[package]
name = "semilattice-database-session"
version = "0.33.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Data is connected by a directed graph, with each node having arbitrarily defined keys and values. Sessions can then manage private data and merge it with mainstream data at any time."

repository = "https://github.com/OdenShirataki/semilattice-database"

keywords = ["database","library"]
categories = ["database","database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
hashbrown.workspace = true
serde.workspace = true
futures.workspace = true
async-recursion.workspace = true

semilattice-database = { version = "0.91" , path = "../semilattice-database" }