[package]
name = "semilattice-database"
version = "0.77.4"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Data is connected by a directed graph, and each node has an arbitrarily defined key-value.A database is not a tree."

repository = "https://github.com/OdenShirataki/semilattice-database"

keywords = ["database","library"]
categories = ["database","database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1"
toml = "0.7"
futures = "0.3.28"
async-recursion = "1.0.4"

versatile-data = { version = "0.86" , path = "../../versatile-data" }
binary_set = { version = "0.3" , path = "../../binary_set" }