[package]
name = "semilattice-database"
version = "0.92.4"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Data is connected by a directed graph, and each node has an arbitrarily defined key-value.A database is not a tree."

repository = "https://github.com/OdenShirataki/semilattice-database"

keywords = ["database","library"]
categories = ["database","database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
hashbrown.workspace = true
serde.workspace = true
futures.workspace = true
async-recursion.workspace = true

parking_lot = "0.12"
toml = "0.7"

versatile-data = { version = "0.101" , path = "../../versatile-data" }
binary_set = { version = "0.9" , path = "../../binary_set" }